# docassemble-MLHPPOAndProposedOrder

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/MLHPPOAndProposedOrder/data/questions/: ppo_and_proposed_order.yml  review.yml
docassemble/MLHPPOAndProposedOrder/data/sources/: interviews_run.feature
docassemble/MLHPPOAndProposedOrder/data/templates/: Instructions_-_Motion.docx  cc_375_attachment.docx  cc_375_statement_of_facts.docx  cc_377_attachment.docx  cc_377_statement_of_facts.docx  cc_395_attachment.docx  cc_395_statement_of_facts.docx  exhibit_attachment_table_of_contents.docx  oakland_county_instructions_after_hearing.docx  oakland_county_instructions_ex_parte.docx  ppo_cover_page.docx
