license = "MIT"
license-files = [
    "LICENSE",
]

[build-system]
requires = [
    "setuptools>=80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.MLHPPOAndProposedOrder"
version = "1.0.18"
description = "A Personal Protection Order for use in Michigan Courts"
readme = "README.md"
authors = [
    { name = "Rami Lorca", email = "rami@lemmalegal.com" },
]
dependencies = []

[project.urls]
Homepage = "https://michiganlegalhelp.org/resources/family/do-it-yourself-personal-protection-order"

[tool.setuptools.packages.find]
where = [
    ".",
]
